# tn-da22tta-110122217-nguyentrongdat-goiyvaketnoigiasu

./: .gitignore  README.md
src/backend/: .env.example  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 20260531_0001_add_audit_logs.py  20260607_0002_add_sepay_payment_fields.py  20260608_0003_create_notifications_table.py  20260609_0004_allow_support_message_threads.py  20260609_0005_add_private_request_link_to_classes.py  20260614_0006_add_start_end_date_to_classes.py  20260622_0007_add_timezone_to_datetime_columns.py  20260625_0008_add_timezone_to_message_timestamps.py  20260626_0009_add_profile_embeddings_table.py
src/backend/app/: main.py
src/backend/app/core/: config.py  deps.py  security.py
src/backend/app/db/: session.py
src/backend/app/models/: __init__.py  audit_log.py  base.py  class_registration.py  course_class.py  learning_need.py  learning_need_schedule.py  learning_session.py  message.py  message_thread.py  message_thread_participant.py  notification.py  payment.py  private_tutoring_request.py  profile_embedding.py  recommendation_event.py  review.py  schedule_block.py  schedule_pattern.py  subject.py  system_setting.py  teaching_contract.py  tutor_application.py  tutor_availability.py  tutor_profile.py  tutor_qualification.py  tutor_subject.py  user_account.py
src/backend/app/schemas/: auth.py  chat.py  common.py  course_class.py  finance.py  learning_need.py  message.py  notification.py  payment.py  (+5 more)
src/backend/scripts/: alter_user_accounts.py  apply_private_class_migration.py  backfill_private_classes.py
(+179 files in other folders)
